--- a/frontend/pharmacyapp/package.json
+++ b/frontend/pharmacyapp/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.19"
   },
   "scripts": {
